--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,25 @@
   background: #131316;
 }
 
+html {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+body {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 ::-webkit-scrollbar {
   width: 8px;
   height: 3.3vh;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #2F2F37;
+  background-color: #2f2f37;
   border-radius: 3px;
   margin-top: 3px;
   margin-bottom: 3px;
@@ -24,10 +36,9 @@
 
 ::-webkit-scrollbar-thumb {
   border-radius: 3px;
-  background-color: #8585AD;
+  background-color: #8585ad;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #8585AD;
+  background-color: #8585ad;
 }
-
