--- a/src/components/modaloverlay/modaloverlay.module.css
+++ b/src/components/modaloverlay/modaloverlay.module.css
@@ -1,24 +1,17 @@
 .modal__wrap {
   position: fixed;
-  display: block;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 0 auto;
-  top: 0;
+  align-items: center;
+  z-index: 1000;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 100;
-  overflow-x: hidden;
+  top: 0;
+  width: 100%;
+  height: 100%;
   background-color: rgba(31, 32, 41, 0.75);
-  pointer-events: none;
-  opacity: 0;
-  transition: opacity 250ms 700ms ease;
 }
 
-.visible {
-  pointer-events: auto;
-  opacity: 1;
-  transition: all 300ms ease-in-out;
+.hide {
+  display: none;
 }
