--- a/src/components/burgerconstructor/burgercons.module.css
+++ b/src/components/burgerconstructor/burgercons.module.css
@@ -11,12 +11,20 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 16px;
-  padding: 0px 16px;
+  padding: 0px;
 
   position: absolute;
   width: 568px;
   height: 656px;
   top: 100px;
+}
+
+.scroll_block {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  padding: 0px;
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -66,7 +74,7 @@
 .popup_title {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   padding: 0px;
   gap: 36px;
@@ -78,79 +86,46 @@
   top: 40px;
 }
 
-.popup_header {
-  width: 580px;
-  height: 64px;
-  display: flex;
-  align-items: center;
-  color: #f2f2f3;
-}
-
-.popup_img {
-  position: absolute;
-  width: 480px;
-  height: 240px;
-  left: calc(50% - 480px / 2);
-  top: 104px;
-}
-
-.popup_name {
-  position: absolute;
-  width: 520px;
-  height: 30px;
-  left: 100px;
-  top: 361px;
-  font-family: 'JetBrains Mono';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 30px;
-  text-align: center;
-}
-
-.popup_nutrition {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  padding: 0px;
-  gap: 20px;
-
-  position: absolute;
-  width: 516px;
-  height: 56px;
-  left: 102px;
-  top: 423px;
-  color: #8585ad;
-}
-
-.popup_nutrition_value {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 0px;
-  gap: 8px;
-
-  width: 120px;
-  height: 56px;
-}
-
-.popup2_main {
+.popup_order {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-}
-
-.popup2_font {
+  position: absolute;
+  width: 520px;
+  height: 120px;
+  top: 120px;
   text-shadow: 0px 0px 16px rgba(51, 51, 255, 0.25),
     0px 0px 8px rgba(51, 51, 255, 0.25), 0px 4px 32px rgba(51, 51, 255, 0.5);
 }
 
-.popup2_graphics {
+.popup_text1 {
+  position: absolute;
+  width: 520px;
+  height: 30px;
+  top: 272px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.popup_img {
   position: absolute;
   width: 107px;
   height: 102px;
-  left: 307px;
   top: 372px;
+}
+
+.popup_text2 {
+  position: absolute;
+  width: 520px;
+  height: 24px;
+  top: 542px;
+}
+
+.popup_text3 {
+  position: absolute;
+  width: 520px;
+  height: 24px;
+  top: 574px;
 }
