--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,17 @@
   height: 1080px;
   margin: 0 auto;
   background: #131316;
-  overflow-y: scroll;
-}
-
-html {
-  width: 100%;
-  max-width: 100%;
   overflow-x: hidden;
+  overflow-y: scroll !important;
 }
 
 body {
   width: 100%;
   max-width: 100%;
+  height: 100%;
+  min-height: 100vh;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 ::-webkit-scrollbar {
