--- a/src/pages/profile.module.css
+++ b/src/pages/profile.module.css
@@ -75,31 +75,40 @@
 .info_block {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   width: 480px;
   height: 64px;
   background: #2f2f37;
   border-radius: 40px;
   padding-left: 24px;
+  border: 2px #4c4cff;
 }
 
 .icon {
   display: flex;
-  padding: 0 24px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 0px 20px 24px;
+  gap: 10px;
+
+  position: absolute;
+  width: 72px;
+  height: 64px;
+  right: 0px;
 }
 
-.active_input {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 480px;
-  height: 64px;
-  background: #2f2f37;
-  border-radius: 40px;
-  padding-left: 24px;
-  border-color: #4c4cff;
+.info_block:focus {
+  border: 2px solid #4c4cff;
+}
+
+.input {
+  border: none;
+  outline: none;
+  background-color: #2f2f37;
+  width: 400px;
+  color: white;
 }
 
 .additional_actions {
