--- a/src/components/input/input.module.css
+++ b/src/components/input/input.module.css
@@ -9,11 +9,6 @@
 }
 
 .input {
-  font-family: 'JetBrains Mono';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
   display: flex;
   align-items: center;
   border: none;
@@ -23,6 +18,10 @@
   width: 80%;
   padding-left: 24px;
   margin-left: 5px;
+}
+
+.inputContainer:focus-within {
+  border: 3px solid #4c4cff;
 }
 
 .icon_pad {
