--- a/src/pages/profile.module.css
+++ b/src/pages/profile.module.css
@@ -82,7 +82,6 @@
   background: #2f2f37;
   border-radius: 40px;
   padding-left: 24px;
-  border: 2px #4c4cff;
 }
 
 .icon {
@@ -99,8 +98,17 @@
   right: 0px;
 }
 
-.info_block:focus {
-  border: 2px solid #4c4cff;
+.info_block_edit {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  width: 480px;
+  height: 64px;
+  background: #2f2f37;
+  border-radius: 40px;
+  padding-left: 24px;
+  border: 3px solid #4c4cff;
 }
 
 .input {
