--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -1,3 +1,17 @@
+.modal__wrap {
+  position: fixed;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(31, 32, 41, 0.75);
+}
+
 .modal {
   overflow-y: hidden;
   overflow-x: hidden;
@@ -21,4 +35,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.hide {
+  display: none;
 }
