--- a/src/pages/orders-feed.module.css
+++ b/src/pages/orders-feed.module.css
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0px;
+  padding-right: 16px;
   gap: 16px;
 
   position: absolute;
@@ -44,6 +44,20 @@
   border-radius: 40px;
 }
 
+.card_order_pr {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+  width: 844px;
+  height: 246px;
+  min-height: 246px;
+  background: #1c1c21;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 2px rgba(0, 0, 0, 0.06),
+    0px 0px 1px rgba(0, 0, 0, 0.04);
+  border-radius: 40px;
+}
+
 .order_id_block {
   display: flex;
   flex-direction: row;
@@ -55,6 +69,17 @@
   height: 24px;
 }
 
+.order_id_block_pr {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px 24px;
+  gap: 16px;
+
+  width: 796px;
+  height: 24px;
+}
+
 .order_name_block {
   display: flex;
   flex-direction: row;
@@ -63,6 +88,19 @@
   gap: 16px;
 
   width: 536px;
+  height: 48px;
+  overflow: hidden;
+  line-height: 1;
+}
+
+.order_name_block_pr {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px 24px;
+  gap: 16px;
+
+  width: 796px;
   height: 48px;
   overflow: hidden;
   line-height: 1;
@@ -83,6 +121,23 @@
   height: 24px;
 }
 
+.order_timestamp_pr {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 678px;
+  height: 24px;
+}
+
+.status {
+  display: none;
+}
+
+.status_pr {
+  width: 796px;
+  height: 24px;
+}
+
 .components_price {
   display: flex;
   flex-direction: row;
@@ -95,12 +150,33 @@
   height: 64px;
 }
 
+.components_price_pr {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0px;
+  gap: 24px;
+
+  width: 796px;
+  height: 64px;
+}
+
 .ingredients {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   position: relative;
   width: 412px;
+  height: 64px;
+}
+
+.ingredients_pr {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  position: relative;
+  width: 696px;
   height: 64px;
 }
 
