--- a/src/components/orderdetails/orderdetails.module.css
+++ b/src/components/orderdetails/orderdetails.module.css
@@ -48,6 +48,7 @@
   width: 520px;
   height: 24px;
   top: 542px;
+  text-align: center;
 }
 
 .popup_text3 {
@@ -55,4 +56,5 @@
   width: 520px;
   height: 24px;
   top: 574px;
+  text-align: center;
 }
